# UnitedPlayer

./: .gitignore  README.md  build.gradle  gradlew.bat  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/man/manchesterunitedplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayBuilder.cpp  FFPlayBuilder.h  FFResample.cpp  FFResample.h  Filter.cpp  Filter.h  FragmentShader.h  GLVideoView.cpp  GLVideoView.h  GrayFilter.cpp  GrayFilter.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayBuilder.cpp  IPlayBuilder.h  IPlayer.cpp  IPlayer.h  IPlayerProxy.cpp  IPlayerProxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  NoneFilter.cpp  NoneFilter.h  OppoFilter.cpp  OppoFilter.h  SLAudioPlay.cpp  SLAudioPlay.h  (+28 more)
app/src/main/cpp/glm/test/core/: core_func_common.cpp  core_func_integer.cpp  core_func_integer_bit_count.cpp  core_func_integer_find_lsb.cpp  core_func_integer_find_msb.cpp  core_func_matrix.cpp  core_func_trigonometric.cpp  core_setup_message.cpp  core_type_mat2x2.cpp  core_type_mat2x3.cpp  core_type_mat2x4.cpp  core_type_mat3x2.cpp  core_type_mat3x3.cpp  core_type_mat3x4.cpp  core_type_mat4x2.cpp  core_type_mat4x3.cpp  core_type_mat4x4.cpp  core_type_vec1.cpp  core_type_vec2.cpp  core_type_vec3.cpp  core_type_vec4.cpp
app/src/main/cpp/glm/test/gtc/: gtc_bitfield.cpp  gtc_integer.cpp  gtc_quaternion.cpp
app/src/main/cpp/glm/test/gtx/: gtx_common.cpp  gtx_compatibility.cpp  gtx_fast_trigonometry.cpp  gtx_matrix_decompose.cpp  gtx_multiple.cpp
app/src/main/java/com/man/manchesterunitedplayer/: FilterAdapter.kt  FilterType.kt  Key.kt  MainActivity.java  ManchesterPlayer.java  OpenUrlActivity.java  PlayActivity.java  PlayListActivity.kt
app/src/main/java/com/man/manchesterunitedplayer/bean/: FilterBean.kt
app/src/main/java/com/man/manchesterunitedplayer/playlist/: PlayListActivity.kt  PlayListAdapter.kt  VideoBean.kt
app/src/main/res/drawable/: bg_pause_btn.xml
app/src/main/res/layout/: activity_main.xml  activity_play.xml  activity_play_list.xml  item_filter_list.xml  item_play_list.xml  openurl.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/man/manchesterunitedplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
record/: CMakeLists.txt  build.gradle
record/src/androidTest/java/com/haha/record/: ExampleInstrumentedTest.kt
record/src/main/: AndroidManifest.xml
record/src/main/cpp/: AudioRecorder.cpp  RecordBuffer.cpp  RecordBuffer.h
record/src/main/java/com/haha/record/: Config.kt  RecordActivity.java  VideoActivity.java
record/src/main/res/layout/: activity_video.xml
record/src/main/res/raw/: fragment_shader.glsl  fragment_shader1.glsl  fragment_shader2.glsl  fragment_shader3.glsl  fragment_shader_screen.glsl  fragment_shader_yuv.glsl  vertex_shader.glsl  vertex_shader_screen.glsl  vertex_shader_yuv.glsl
record/src/main/res/values/: strings.xml  styles.xml
record/src/test/java/com/haha/record/: ExampleUnitTest.kt
(+13 files in other folders)
